@@ -442,7 +442,7 @@ function toggleFileFolderActions() {
 	var disabled = true;
 	var ea = document.getElementsByName("file"); 
 	for (var i=0; i<ea.length; i++) if (ea[i].checked) { disabled=false; break; }
-	var names = new Array('copy','cut','delete','newname','rename','zip','changeperm');
+	var names = new Array('copy','cut','delete','newname','rename','zip','changeperm','createsymlink','lndst');
 	for (var i=0; i<names.length; i++) {
 		ea = document.getElementsByName(names[i]);
 		if (ea) for (var j=0; j<ea.length; j++) ea[j].disabled = disabled;
