@@ -58,7 +58,6 @@ changepermlegend               "r - read, w - write, x - execute, s - setuid/set
 classicview                    "Classic View"
 clickchangessort               "Click here to change sort."
 clickforfullsize               "Click for full size"
-createnewfilebutton            "Create File"
 confirm                        "Please confirm."
 confirmsavetextdata            "Do you really want to save %s?"
 copy                           "Copy"
@@ -66,6 +65,10 @@ copytooltip                    "Add files/folders to clipboard for copy operatio
 created                        "created"
 createfolderbutton             "Create Folder"
 createfoldertext               "Create new folder: "
+createnewfilebutton            "Create File"
+createsymlinkbutton            "Create Link"
+createsymlinkdescr             "Create a symbolic link to the selected file or folder."
+createsymlinktext              "Symbolic link name: "
 cut                            "Cut"
 cuttooltip                     "Add files/folders to clipboard for move operation"
 deletefileconfirm              "Do you really want to delete "%s"?"
@@ -119,6 +122,9 @@ msg_chpermnothingerr           "Please select files/folders to change permission
 msg_copyfailed                 "File(s)/Folder(s) %s not copied."
 msg_copysuccess                "File(s)/Folder(s) %s copied."
 msg_createnewfileerr           "Could not create file '%s' (%s)."
+msg_createsymlinkerr           "Could not create symbolic link %s to %s (%s)."
+msg_createsymlinknolinknameerr "Please give me a symbolic link name."
+msg_createsymlinknoneselerr    "Please select a file or folder to link to."
 msg_cutfailed                  "File(s)/Folder(s) %s not moved."
 msg_cutsuccess                 "File(s)/Folder(s) %s moved."
 msg_deletedmulti               "%s files/folders were deleted."
@@ -135,6 +141,7 @@ msg_renameerr                  "Could not move files/folders '%s' to '%s'."
 msg_renamenotargeterr          "Please specify a target folder/name for move/rename."
 msg_renamenothingerr           "Please select files/folders to rename/move."
 msg_savetexterr                "Sorry, could not save %s (wrong permissions?)."
+msg_symlinkcreated             "Symbolic link %s to %s created."
 msg_textsaved                  "File %s saved."
 msg_uploadforbidden            "Sorry, it's not possible to upload file(s) "%s" (wrong permissions?)."
 msg_uploadmulti                "%s files (%s) uploaded successfully."
